<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
    android:id="@+id/text_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:textAlignment="center"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />


    <ImageView
        android:id="@+id/home_img"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/mazrineblue"
        android:scaleType="fitXY"
        android:baseline="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/home_img" />
    <ImageView
        android:id="@+id/home_img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:scaleType="centerInside"
        android:src="@drawable/t" />
    <TextView
        android:id="@+id/home_tv_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Toni Rizky Awalludin"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/home_img_profile" />
    <View
        android:id="@+id/View1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/home_tv_tentangdiri"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/home_tv_tentangdiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about"
        android:layout_below="@+id/home_tv_nama" />




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/home_tv_tentangdiri"
        android:text="@string/hobi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_below="@+id/home_tv_tentangdiri"
        android:text="@string/interes"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_below="@+id/home_tv_tentangdiri"
        android:text="@string/Cita"/>
</RelativeLayout>